<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/order"
            android:checked="true"
            android:title="@string/order" />

        <item
            android:id="@+id/orderHistory"
            android:checked="false"
            android:title="@string/orderHis" />

        <item
            android:id="@+id/offers"
            android:checked="false"
            android:title="@string/offers" />

        <item
            android:id="@+id/storelocator"
            android:checked="false"
            android:title="@string/storelocator" />

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:title="@string/mypro" />

        <item
            android:id="@+id/logOut"
            android:checked="false"
            android:title="@string/logout" />
    </group>
</menu>
