<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:padding="@dimen/activity_horizontal_margin">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameWrapper"
                app:errorTextAppearance="@style/Error"
                android:layout_marginBottom="4dp">

                <EditText
                    android:id="@+id/input_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailWrapper"
                app:errorTextAppearance="@style/Error"
                android:layout_marginBottom="4dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactWrapper"
            android:layout_marginBottom="4dp"
            app:errorTextAppearance="@style/Error">

            <EditText
                android:id="@+id/input_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:hint="@string/contact1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:errorTextAppearance="@style/Error"
                android:id="@+id/addressWrapper"
                >

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:paddingTop="8dp"
                    android:textColor="@color/black"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/landWrapper"
                app:errorTextAppearance="@style/Error">

                <EditText
                    android:id="@+id/input_land"
                    android:layout_width="match_parent"
                    android:maxLength="10"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact2"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

    </RelativeLayout>



    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:id="@+id/editLayout"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile"
                android:textStyle="normal"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center"
            android:id="@+id/saveLayout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/saveProfile"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>
</ScrollView>

