<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/gray"
                app:errorTextAppearance="@style/Error"
                android:id="@+id/nameWrapper"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:id="@+id/emailWrapper"
                android:textColorHint="@color/gray"
                app:errorTextAppearance="@style/Error"
                android:layout_marginTop="0dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:id="@+id/pwdWrapper"
                app:errorTextAppearance="@style/Error"
                android:textColorHint="@color/gray"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:hint="Password"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:id="@+id/rePwdWrapper"
                app:errorTextAppearance="@style/Error"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/input_reEnterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:hint="@string/re_enter_pwd"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_signup"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
                <ProgressBar
                    android:id="@+id/progressBarSpinner"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    style="?android:attr/progressBarStyleLarge"
                    />
            </FrameLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

    </LinearLayout>
</RelativeLayout>